# FastClustering

./: CMakeLists.txt  README.md  main.cpp  notes.md  pybind.cpp  setup.py  test.py
clustering/: __init__.py  distribution.py
clustering.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
clustering/utils/: plot_utils.py
figures/: iterations_vs_precision.ipynb  speed_test.ipynb
tests/: CMakeLists.txt.in  main.cpp
utils/: clustering.hpp  greenkhorn.hpp  samplers.hpp  vose_alias.hpp
